<resources>
	<string name="app_name">OnlineShopSatriaAdhiPradana</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome!"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="sign_in">Sign in</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="email">Email</string>
	<string name="log_in">Log in</string>
	<string name="sign_in_with_google">Sign in with Google</string>
	<string name="sign_in_with_apple">Sign in with Apple</string>
	<string name="log_in_prefix">Already have an account? </string>
	<string name="welcome_back">Welcome back</string>
	<string name="password">Password</string>
	<string name="profile">Profile</string>
	<string name="change_photo">Change photo</string>
	<string name="satria_adhi_pradana">Satria Adhi Pradana</string>
	<string name="upload_item">Upload item</string>
	<string name="trade_store">Trade store</string>
	<string name="payment_method">Payment method</string>
	<string name="balance">Balance</string>
	<string name="balance_test">$ 1593</string>
	<string name="trade_history">Trade history</string>
	<string name="restore_purchase">Restore Purchase</string>
	<string name="help">Help</string>
	<string name="log_out">Log out</string>
	<string name="title_activity_shop">ShopActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="home">Home</string>
	<string name="favorites">Favorites</string>
	<string name="basket">Basket</string>
	<string name="chat">Chat</string>
	<string name="what_are_you_looking_for">What are you looking for ?</string>
	<string name="phones">Phones</string>
	<string name="headphones">Headphones</string>
	<string name="games">Games</string>
	<string name="cars">Cars</string>
	<string name="furniture">Furniture</string>
	<string name="kids">Kids</string>
	<string name="latest">Latest</string>
	<string name="view_all">View all</string>
	<string name="flash_sale">Flash Sale</string>
	<string name="brands">Brands</string>
	<string name="quantity">Quantity:</string>
	<string name="add_to_cart">ADD TO CART</string>
	<string name="minus">-</string>
	<string name="plus">+</string>
	<string name="new_balance_sneakers">New balance Sneakers</string>
	<string name="features_waterproof_fire_air_resistant_shoes_all_changed_when_the_country_of_fire_attacked">Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked</string>
	<string name="_3_9">3.9</string>
	<string name="_4000_reviews">(4000 reviews)</string>
	<string name="color">Color:</string>
	<string name="reviews">reviews)</string>
	<string name="money">$</string>
	<string name="total">#</string>
</resources>