<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:paddingBottom="20dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/app_background"
		tools:context="com.example.onlineshopsatriaadhipradana.presentation.fragment.ProfileFragment">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/profile_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/profile_scroll">

			<RelativeLayout
				android:layout_marginEnd="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageButton
					android:id="@+id/back_btn"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_centerVertical="true"
					android:layout_alignParentStart="true"
					app:tint="#2d2d2d"
					android:background="@color/app_background"
					android:src="@drawable/ic_back">
				</ImageButton>

				<TextView
					style="@style/textHeader"
					android:id="@+id/profile_text"
					android:layout_centerInParent="true"
					android:text="@string/profile"
					android:textSize="15sp">
				</TextView>
			</RelativeLayout>
		</androidx.appcompat.widget.Toolbar>

		<ScrollView
			android:id="@+id/profile_scroll"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/profile_toolbar"
			app:layout_constraintBottom_toBottomOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/profile_image"
					android:layout_width="61dp"
					android:layout_height="61dp"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@+id/change_photo_text"
					android:background="@drawable/ic_profile_image">
				</ImageView>

				<TextView
					android:id="@+id/change_photo_text"
					style="@style/text"
					android:layout_marginTop="6dp"
					android:text="@string/change_photo"
					android:textColor="@color/textGray"
					android:textSize="8sp"
					app:layout_constraintTop_toBottomOf="@id/profile_image"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@id/name_text">
				</TextView>

				<TextView
					android:id="@+id/name_text"
					style="@style/textHeader"
					android:layout_marginTop="17dp"
					android:text="@string/satria_adhi_pradana"
					android:textSize="16sp"
					app:layout_constraintTop_toBottomOf="@id/change_photo_text"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@id/upload_item_button">
				</TextView>

				<com.google.android.material.button.MaterialButton
					style="@style/button"
					android:id="@+id/upload_item_button"
					android:layout_marginHorizontal="43dp"
					android:layout_marginTop="36dp"
					android:fontFamily="@font/montserrat_semibold"
					android:textSize="14sp"
					android:text="@string/upload_item"
					android:paddingHorizontal="50dp"
					app:iconPadding="-15dp"
					app:icon="@drawable/ic_upload"
					app:iconSize="15dp"
					app:layout_constraintTop_toBottomOf="@id/name_text"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@id/trade_store_layout">
				</com.google.android.material.button.MaterialButton>

				<RelativeLayout
					android:id="@+id/trade_store_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="14dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/upload_item_button"
					app:layout_constraintBottom_toTopOf="@id/trade_store_layout">

					<ImageView
						android:id="@+id/trade_store_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_card"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/trade_store_image"
						android:text="@string/trade_store">
					</TextView>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_alignParentEnd="true"
						android:src="@drawable/ic_go">
					</ImageView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/payments_method_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/trade_store_layout"
					app:layout_constraintBottom_toTopOf="@id/balance_layout">

					<ImageView
						android:id="@+id/payments_method_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_card"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/payments_method_image"
						android:text="@string/payment_method">
					</TextView>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_alignParentEnd="true"
						android:src="@drawable/ic_go">
					</ImageView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/balance_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/payments_method_layout"
					app:layout_constraintBottom_toTopOf="@id/trade_history_layout">

					<ImageView
						android:id="@+id/balance_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_card"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/balance_image"
						android:text="@string/balance">
					</TextView>

					<TextView
						style="@style/text.profileItem"
						android:layout_alignParentEnd="true"
						android:text="@string/balance_test">
					</TextView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/trade_history_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/balance_layout"
					app:layout_constraintBottom_toTopOf="@id/restore_purchase_layout">

					<ImageView
						android:id="@+id/trade_history_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_card"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/trade_history_image"
						android:text="@string/trade_history">
					</TextView>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_alignParentEnd="true"
						android:src="@drawable/ic_go">
					</ImageView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/restore_purchase_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/trade_history_layout"
					app:layout_constraintBottom_toTopOf="@id/help_layout">

					<ImageView
						android:id="@+id/restore_purchase_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_restore"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/restore_purchase_image"
						android:text="@string/restore_purchase">
					</TextView>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_alignParentEnd="true"
						android:src="@drawable/ic_go">
					</ImageView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/help_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/restore_purchase_layout"
					app:layout_constraintBottom_toTopOf="@id/log_out_layout">

					<ImageView
						android:id="@+id/help_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_help"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/help_image"
						android:text="@string/help">
					</TextView>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/log_out_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginBottom="14dp"
					android:layout_marginHorizontal="43dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/help_layout"
					app:layout_constraintBottom_toBottomOf="parent">

					<ImageView
						android:id="@+id/log_out_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:src="@drawable/ic_log_out"
						android:background="@drawable/ic_ellipse_background">
					</ImageView>

					<TextView
						style="@style/text.profileItem"
						android:layout_toEndOf="@id/log_out_image"
						android:text="@string/log_out">
					</TextView>
				</RelativeLayout>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</ScrollView>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>