<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<import type="android.view.View"/>
		<variable
			name="viewModel"
			type="com.example.onlineshopsatriaadhipradana.presentation.viewmodel.LogInViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingHorizontal="43dp"
		android:background="@color/app_background"
		tools:context=".presentation.fragment.LogInFragment">

		<TextView
			style="@style/textHeader"
			android:id="@+id/welcome_back_text"
			android:layout_marginTop="121dp"
			android:text="@string/welcome_back"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/first_name_layout">
		</TextView>

		<com.google.android.material.textfield.TextInputLayout
			style="@style/textInputLayout"
			android:id="@+id/first_name_layout"
			android:layout_width="match_parent"
			android:layout_height="29dp"
			android:layout_marginTop="60dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
			app:layout_constraintBottom_toTopOf="@id/password_layout">

			<com.google.android.material.textfield.TextInputEditText
				style="@style/textInputEditText"
				android:id="@+id/first_name_text"
				android:hint="@string/first_name"
				android:text="@={viewModel.firstName}"
				android:paddingVertical="5dp"
				android:inputType="textCapSentences" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			style="@style/textInputLayout"
			android:id="@+id/password_layout"
			android:layout_width="match_parent"
			android:layout_height="29dp"
			android:layout_marginTop="35dp"
			app:passwordToggleEnabled="true"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/first_name_layout"
			app:layout_constraintBottom_toTopOf="@id/log_in_button">

			<com.google.android.material.textfield.TextInputEditText
				style="@style/textInputEditText"
				android:id="@+id/password_text"
				android:hint="@string/password"
				android:text="@={viewModel.password}"
				android:paddingVertical="5dp"
				android:paddingStart="55dp"
				android:inputType="textPassword"/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			style="@style/button"
			android:id="@+id/log_in_button"
			android:layout_marginTop="100dp"
			android:layout_marginBottom="302dp"
			android:text="@string/log_in"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/password_layout"
			app:layout_constraintBottom_toBottomOf="parent">
		</com.google.android.material.button.MaterialButton>

		<ProgressBar
			android:id="@+id/progressbar"
			android:visibility="@{viewModel.isLoading == true ? View.VISIBLE : View.GONE}"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"/>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>